--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "client",
-  "version": "0.1.0",
+  "name": "geolocateip",
+  "version": "1.0.0",
   "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "@babel/register": "^7.17.7",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "ignore-styles": "^5.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
@@ -16,7 +22,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node server/index.js",
+    "server-dev": "nodemon server/index.js",
+    "serve": "react-scripts build & node server/index.js"
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
