--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "geolocateip",
   "version": "1.0.0",
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
     "@babel/register": "^7.17.7",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/lab": "^5.0.0-alpha.86",
+    "@mui/material": "^5.8.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "ignore-styles": "^5.0.1",
@@ -24,9 +30,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node server/index.js",
+    "server": "cross-env NODE_ENV=production node server/index.js",
     "server-dev": "nodemon server/index.js",
-    "serve": "react-scripts build & node server/index.js"
+    "serve": "react-scripts build & cross-env NODE_ENV=production node server/index.js"
   },
   "eslintConfig": {
     "extends": [
